--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
-<app-header></app-header>
 
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>I'm working!</h2>
+      <app-header></app-header>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <app-recipies></app-recipies>
+      <app-shopping-list></app-shopping-list>
+    </div>
+  </div>
+
 </div>
