--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,7 @@
-<p>shopping-list works!</p>
+<div class="row">
+    <div class="col-md-12">
+        <app-shopping-list></app-shopping-list>
+        <hr>
+        <p>The list</p>
+    </div>
+</div>
