--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <app-shopping-list></app-shopping-list>
+        <app-shopping-edit></app-shopping-edit>
         <hr>
         <p>The list</p>
     </div>
