--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-
 <app-header></app-header>
 
+<div class="container">
   <div class="row">
     <div class="col-md-12">
       <app-recipies></app-recipies>
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
-
 </div>
+
