--- a/src/app/recipies/recipe-list/recipe-list.component.html
+++ b/src/app/recipies/recipe-list/recipe-list.component.html
@@ -1,1 +1,23 @@
+<div class="row">
+    <div class="col-md-12">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-md-12">
+        <a href="#" *ngFor="let item of recipes"
+         class="list-group-item clearfix" >
+            <div class="pull-left">
+                <h4 class="list-group-item-heading">{{item.name}}</h4>
+                <p class="list-group-item-text">{{item.description}}</p>
+            </div>
+            <span class="pull-right">
+                <img [src]="item.imagePath" alt="{{item.name}}" class="img-responsive" style="max-height: 50px">
+            </span>
+        </a>
+    </div>
+</div>
+
+
 <app-recipe-item></app-recipe-item>
