--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,10 @@
     <div class="col-md-12">
         <app-shopping-edit></app-shopping-edit>
         <hr>
-        <p>The list</p>
+        <ul class="list-group">
+            <a class="list-group-item" *ngFor="let i of ingridients">
+                {{i.name}} ({{ i.amount }})
+            </a>
+        </ul>
     </div>
 </div>
