--- a/src/app/recipies/recipe-list/recipe-list.component.html
+++ b/src/app/recipies/recipe-list/recipe-list.component.html
@@ -6,18 +6,9 @@
 <br>
 <div class="row">
     <div class="col-md-12">
-        <a href="#" *ngFor="let item of recipes"
-         class="list-group-item clearfix" >
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{item.name}}</h4>
-                <p class="list-group-item-text">{{item.description}}</p>
-            </div>
-            <span class="pull-right">
-                <img [src]="item.imagePath" alt="{{item.name}}" class="img-responsive" style="max-height: 50px">
-            </span>
-        </a>
+        <!-- using property binding to bind the input data using property binding -->
+        <app-recipe-item *ngFor="let recipeEL of recipes" [recipeItem]="recipeEL" > </app-recipe-item>
     </div>
 </div>
 
 
-<app-recipe-item></app-recipe-item>
