--- a/src/app/recipies/recipe-list/recipe-list.component.html
+++ b/src/app/recipies/recipe-list/recipe-list.component.html
@@ -7,7 +7,9 @@
 <div class="row">
     <div class="col-md-12">
         <!-- using property binding to bind the input data using property binding -->
-        <app-recipe-item *ngFor="let recipeEL of recipes" [recipeItem]="recipeEL" > </app-recipe-item>
+        <app-recipe-item *ngFor="let recipeEL of recipes" 
+        [recipeItem]="recipeEL" 
+        (recipeSelected) = "onRecipeSelected(recipeEL)" > </app-recipe-item>
     </div>
 </div>
 
