--- a/src/app/recipies/recipe-details/recipe-details.component.html
+++ b/src/app/recipies/recipe-details/recipe-details.component.html
@@ -13,14 +13,16 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <button href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" role="button">
-                Manage <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="#">To Shopping Cart</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
-            </ul>
+            <div class="btn-group" appDropdown>
+                <button href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" role="button">
+                    Manage <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">To Shopping Cart</a></li>
+                    <li><a href="#">Edit Recipe</a></li>
+                    <li><a href="#">Delete Recipe</a></li>
+                </ul>
+            </div> 
         </div>
     </div>
     <div class="row">
