--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,22 +8,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Recipe Book</a>
+        <a class="navbar-brand" routerLink="/recipes">Recipe Book</a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#" (click)="onSelect('recipe')" >Recipe</a></li>
-          <li><a href="#" (click)="onSelect('shopping-list')" >Shopping-List</a></li>
+          <li routerLinkActive="active" ><a  routerLink="/recipes" >Recipe</a></li>
+          <li routerLinkActive="active" ><a routerLink="/shopping-list" >Shopping-List</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Manage <span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button">Manage <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Save Data</a></li>
-              <li><a href="#">Fetch Data</a></li>
+              <li><a>Save Data</a></li>
+              <li><a>Fetch Data</a></li>
             </ul>
           </li>
         </ul>
