--- a/src/app/recipies/recipe-details/recipe-details.component.html
+++ b/src/app/recipies/recipe-details/recipe-details.component.html
@@ -14,13 +14,13 @@
     <div class="row">
         <div class="col-md-12">
             <div class="btn-group" appDropdown>
-                <button href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" role="button">
+                <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" role="button">
                     Manage <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a href="#">To Shopping Cart</a></li>
-                    <li><a href="#">Edit Recipe</a></li>
-                    <li><a href="#">Delete Recipe</a></li>
+                    <li><a (click) = addToShoppingList()>To Shopping Cart</a></li>
+                    <li><a>Edit Recipe</a></li>
+                    <li><a>Delete Recipe</a></li>
                 </ul>
             </div> 
         </div>
@@ -33,7 +33,12 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
-            Ingridients
+           <ul class="list-group">
+               <li class="list-group-item"
+                *ngFor="let ingridient of recipeItemSelected.ingridients ">
+                    {{ingridient.name}} | {{ingridient.amount}}
+               </li>
+           </ul>
         </div>
     </div>
 </div>
