--- a/src/app/recipies/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipies/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
-<a href="#" class="list-group-item clearfix" (click)="selectRecipe()" >
+<a [routerLink]="[recipeId]"
+    routerLinkActive="active"
+    class="list-group-item clearfix">
     <div class="pull-left" style="width: 80%;">
         <h4 class="list-group-item-heading">{{recipeItem.name}}</h4>
         <p class="list-group-item-text">{{recipeItem.description}}</p>
