--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <app-shopping-edit (ingridientAdded)= "onIngridientAdded($event)"></app-shopping-edit>
+        <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group">
             <a class="list-group-item" *ngFor="let i of ingridients">
