adding Subject insted of eventEmitter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- to create navigation using ngIf -->
 
-<app-header (featureSelected)="onNavigate($event)" ></app-header>
+<app-header></app-header>
 
 <div class="container">
   <div class="row">
