--- a/src/app/recipies/recipe-list/recipe-list.component.html
+++ b/src/app/recipies/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button (click)="newRecipe()" class="btn btn-success">New Recipe</button>
     </div>
 </div>
 <br>
