--- a/src/app/recipies/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipies/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,72 @@
-<p>recipe-edit works!</p>
+<div class="row">
+    <div class="com-xs-12">
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="com-xs-12">
+                    <button class="btn btn-primary" [disabled]="recipeForm.invalid"
+                        style="margin: 10px;" type="submit">Save</button>
+                    <button class="btn btn-danger" type="button">Cancel</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input class="form-control" formControlName="name" id="name"> 
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="imagePath">Image Path</label>
+                        <input class="form-control" formControlName="imagePath" id="imagePath"> 
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <img src="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea class="form-control" formControlName="description" id="description" rows="6"> </textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12" formArrayName="ingridients">
+                    <label>Ingridients</label>
+                    <div class="row" style="margin-top: 10px;"
+                        *ngFor="let ingredientCtrl of controls; let i = index" [formGroupName]="i" >
+                        <div class="col-xs-7">
+                            <input type="text" placeholder="ingridient name"
+                                formControlName="name" class="form-control">
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="number" placeholder="amount"
+                            formControlName="amount" class="form-control">
+                        </div>
+                        <div class="col-xs-2">
+                            <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top: 10px;">
+                        <div class="col-sm-12">
+                            <button class="btn btn-success"type="button"  (click)="onAddIngridient()" >Add ingridient</button>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
+        </form>
+    </div>
+</div>
