--- a/src/app/recipies/recipe-details/recipe-details.component.html
+++ b/src/app/recipies/recipe-details/recipe-details.component.html
@@ -20,7 +20,7 @@
                 <ul class="dropdown-menu">
                     <li><a (click) = addToShoppingList()>To Shopping Cart</a></li>
                     <li><a (click) = editRecipe() >Edit Recipe</a></li>
-                    <li><a>Delete Recipe</a></li>
+                    <li><a (click)="onDeleteRecipe()" >Delete Recipe</a></li>
                 </ul>
             </div> 
         </div>
