--- a/src/app/recipies/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipies/recipe-edit/recipe-edit.component.html
@@ -5,7 +5,7 @@
                 <div class="com-xs-12">
                     <button class="btn btn-primary" [disabled]="recipeForm.invalid"
                         style="margin: 10px;" type="submit">Save</button>
-                    <button class="btn btn-danger" type="button">Cancel</button>
+                    <button class="btn btn-danger" (click)="cancelChanges()" type="button">Cancel</button>
                 </div>
             </div>
 
@@ -21,7 +21,8 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="imagePath">Image Path</label>
-                        <input class="form-control" formControlName="imagePath" id="imagePath"> 
+                        <input class="form-control" #imagePath
+                         formControlName="imagePath" id="imagePath"> 
                     </div>
                 </div>
             </div>
@@ -29,7 +30,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <img src="" class="img-responsive">
+                        <img [src]="imagePath.value" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -55,7 +56,7 @@
                             formControlName="amount" class="form-control">
                         </div>
                         <div class="col-xs-2">
-                            <button class="btn btn-danger">X</button>
+                            <button type="button" (click)="onIngDelete(i)" class="btn btn-danger">X</button>
                         </div>
                     </div>
                     <div class="row" style="margin-top: 10px;">
